--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "watch": "nodeamon --exec npm run start",
+    "lint": "eslint ./src/**",
     "babel": "babel src -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,11 +18,18 @@
     "babel-preset-es2015": "^7.0.0-beta.3",
     "babel-preset-stage-3": "^7.0.0-beta.3",
     "babel-register": "^7.0.0-beta.3",
+    "compressible": "^2.0.15",
+    "concurrency-logger": "^2.1.0",
+    "ioredis": "^4.0.0",
     "kcors": "^2.2.1",
     "koa": "^2.5.3",
     "koa-bodyparser": "^3.2.0",
+    "koa-cache-lite": "^3.8.8",
+    "koa-compress": "^3.0.0",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.3.1",
     "monk": "latest"
+  },
+  "devDependencies": {
+    "eslint": "^5.6.1"
   }
 }
