--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "koa-bodyparser": "^3.2.0",
     "koa-cache-lite": "^3.8.8",
     "koa-compress": "^3.0.0",
+    "koa-context-validator": "^0.4.1",
     "koa-router": "^7.4.0",
     "monk": "latest"
   },
